--- a/Project/src/micro/Makefile
+++ b/Project/src/micro/Makefile
@@ -5,7 +5,7 @@
 
 ### PROJECT_DIR
 ### This is the path to where you have created/cloned your project
-PROJECT_DIR       = /Users/{{christophertchervenkov}}/Desktop/GitHub/ROBOT/Project
+PROJECT_DIR       = /Users/christophertchervenkov/Desktop/GitHub/ROBOT/Project
 
 ### AVR_GCC_VERSION
 ### Check if the version is equal or higher than 4.9
